--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,37 +41,6 @@ h1 {
     gap: 10px;
     margin: 20px;
 }
-/*button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}*/
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 
 /* Global Styles */
 
@@ -181,4 +150,20 @@ body {
 .login-btn:hover {
     background-color: #000000;
     color: #ffffff;
+}
+
+.btn-shared {
+  padding: 0.5rem 1rem;
+  background-color: #1976d2;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+}
+
+.btn-shared:hover {
+  background-color: #115293;
 }
